[package]
name = "arcd"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
description = "A rust node implementing the ensicoin protocol"
edition = "2018"

[dependencies]
ensicoin_messages = "0.6.0"
ensicoin_serializer = { version = "2.0.6", features = [] }
ensicoin_serializer_derive = "0.2.5"

futures = "0.1.28"
tokio = "0.1.22"
tokio-timer = "0.2.11"
tokio-bus = "0.1.1"

log = "0.4.7"
simplelog = "0.6.0"

dirs = "2.0.1"

ripemd160 = "0.8.0"
secp256k1 = "0.14.1"
sha2 = "0.8.0"

sled = "0.24.1"
bytes = "0.4.12"
generic-array = { version = "0.13.2", features = ["serde"] }
typenum = "1.10.0"

prost = "0.5.0"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc", features= ["tower-hyper"] }
tower-hyper = "0.1.0"

serde = { version = "1.0.94", features = ["derive"] }

num-bigint = "0.2.2"
tokio-signal = "0.2.7"
reqwest = "0.9.18"

ron = "0.5.1"

structopt = "0.2.18"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc", features = ["tower-hyper"] }
