[package]
name = "arcd"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
description = "A rust node implementing the ensicoin protocol"
edition = "2018"

[dependencies]
ensicoin_messages = "0.6.0"
ensicoin_serializer = { version = "2.0.6", features = [] }
ensicoin_serializer_derive = "0.2.5"

futures = "0.1.28"
tokio = "0.1.22"
tokio-timer = "0.2.11"
tokio-bus = { version = "0.1.1", optional = true }

log = "0.4.8"
simplelog = "0.7.1"

dirs = "2.0.2"

ripemd160 = "0.8.0"
secp256k1 = "0.15.3"
sha2 = "0.8.0"

sled = "0.26.3"
bytes = "0.4.12"
generic-array = { version = "0.13.2", features = ["serde"] }
typenum = "1.11.2"

prost = { version = "0.5.0", optional = true }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc", features= ["tower-hyper"] , optional = true }
tower-hyper = { optional = true, version = "0.1.1" }

serde = { version = "1.0.99", features = ["derive"] }

num-bigint = "0.2.2"
tokio-signal = "0.2.7"
reqwest = { version = "0.9.20", optional = true }

ron = "0.5.1"

structopt = "0.3.0"
service_book = { version = "0.1.2", optional = true }

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc", features = ["tower-hyper"], optional = true }

[features]
grpc = ["tower-grpc-build", "tower-hyper", "tower-grpc", "prost", "tokio-bus"]
matrix_discover = ["reqwest"]
service_discover = ["reqwest", "service_book"]

default = ["grpc", "service_discover"]
