[package]
name = "arcd"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
description = "A rust node implementing the ensicoin protocol"
edition = "2018"

[dependencies]
ensicoin_messages = { path = "../ensicoin_messages" }
ensicoin_serializer = { path = "../ensicoin_serializer"}
ensicoin_serializer_derive = { path = "../ensicoin_serializer_derive"}

log = "0.4.8"
simplelog = "0.7.4"

dirs = "2.0.2"

ripemd160 = "0.8.0"
secp256k1 = "0.15.5"
sha2 = "0.8.0"

sled = "0.28.0"
bytes = "0.4.12"
generic-array = { version = "0.12", features = ["serde"] }
typenum = "1.11.2"

serde = { version = "1.0.101", features = ["derive"] }

num-bigint = "0.2.3"
reqwest = { version = "0.10.0-alpha.1", optional = true }

ron = "0.5.1"

structopt = { version = "0.3.3", optional = true }
service_book = { version = "0.1.2", optional = true }
rand = "0.7.2"
tonic = { version = "0.1.0-alpha.3", optional = true }
tokio = { version = "0.2.0-alpha.6", features = ["signal"]}
prost = "0.5.0"
prost-derive = "0.5.0"
futures-preview = "0.3.0-alpha.17"
cookie-factory = "0.3.0"

[build-dependencies]
tonic-build = { version = "0.1.0-alpha.3", optional = true }

[features]
grpc = ["tonic-build", "tonic"]
matrix_discover = ["reqwest"]
service_discover = ["reqwest", "service_book"]
cli-config = ["structopt"]

default = ["grpc", "service_discover", "cli-config"]
