[package]
name = "bincode_modified"
version = "1.0.1"
authors = ["Ty Overby <ty@pre-alpha.com>", "Francesco Mazzoli <f@mazzo.li>", "David Tolnay <dtolnay@gmail.com>", "Daniel Griffen"]
exclude = ["logo.png", "tests/*", "examples/*", ".gitignore", ".travis.yml", "changelist.org"]

publish =  false

readme = "./readme.md"
categories = ["network-programming"]
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]

license = "MIT"
description = "A binary serialization / deserialization strategy that uses Serde for transforming structs into bytes and vice versa! , modified to use length as var_uint"

[dependencies]
byteorder = "1.2.0"
serde = "^1.0.63"

[dev-dependencies]
serde_bytes = "^0.10.3"
serde_derive = "^1.0.27"

[features]
i128 = ["byteorder/i128"]
