[package]
name = "ensicoin_messages"
version = "1.0.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

description = "Data types used in the ensicoin protocol"
license = "MIT"
repository = "https://github.com/EnsicoinDevs/ensicoin-message"

[dependencies]
ensicoin_serializer = { path = "../ensicoin_serializer" }
ensicoin_serializer_derive = { path = "../ensicoin_serializer_derive" }
bytes = "0.4.12"
generic-array = "0.12.3"
sha2 = "0.8.0"
log = "0.4.8"

