[package]
name = "ensicoin_serializer"
version = "2.0.6"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

description = "Functions to serialize / deserialize to the ensicoin protocol"

readme = "readme.md"
license = " GPL-3.0-or-later"

repository = "https://github.com/EnsicoinDevs/ensicoin_serializer"

[dependencies]
ensicoin_serializer_derive = { version = "0.2", optional = true, path="../ensicoin_serializer_derive" }
generic-array = "0.13.2"
log = { version = "0.4.8", optional = true }
typenum = "1.11.2"
bytes = "0.4.12"
